tests/mm0_mmu/fail/bad-sort312.mmu
-- bad modifier order
(sort s312 provable pure strict)